--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -1,21 +1,46 @@
-﻿
-body {
-    margin: 0;
-    background: #222;
+﻿body {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
+    margin: 70px 0 70px 0;
 }
 
-.container {
-    width: 80%;
-    
+/* button default
+---------------------------- */
+.btn-default {
+    color: #333;
+    background-color: #f8f9fa;
+    border-color: #ccc;
+}
+
+    .btn-default:focus {
+        color: #333;
+        background-color: #e6e6e6;
+        border-color: #8c8c8c;
+    }
+
+    .btn-default:active,
+    .btn-default:hover {
+        color: #333;
+        background-color: #e6e6e6;
+        border-color: #adadad;
+    }
+
+
+
+
+
+
+
+
+
+/*
+body {
+    margin: 70px 0 70px 0;
+    font-family: 'Open Sans', sans-serif;
 }
 .nav-item {
     width : 200px;
-    height : auto;
     text-align: center;
-    
-}P
+}
 .nav-item:hover{
     background-color:#056582;
     font:bold;
@@ -24,3 +49,4 @@ body {
 .navbar-brand{
     text-align:center;
 }
+    */
