--- a/Projeto/drivers.css
+++ b/Projeto/drivers.css
@@ -1,2 +1,29 @@
 ﻿body {
+    font-family: 'Open Sans', sans-serif;
+    margin: 70px 0 70px 0;
 }
+
+
+/* button default
+---------------------------- */
+.btn-default {
+    color: #333;
+    background-color: #f8f9fa;
+    border-color: #ccc;
+}
+
+    .btn-default:focus {
+        color: #333;
+        background-color: #e6e6e6;
+        border-color: #8c8c8c;
+    }
+
+    .btn-default:active,
+    .btn-default:hover {
+        color: #333;
+        background-color: #e6e6e6;
+        border-color: #adadad;
+    }
+    .btn-setFav:hover { /* RESOLVER ESTA TRETA PARA O BOTÃO FICAR ROSA QND SE DÁ HOVER, FAVORITOS LOL */
+        background-color:hotpink;
+    }
