--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -29,11 +29,11 @@
 }
 
 .dropdown .dropbtn {
-        font-size: 16px;
+        font-size: 15px;
         border: none;
         outline: none;
-        color: white;
-        padding: 14px 16px;
+        color: lightgrey;
+        padding: 10px 12px;
         background-color: inherit;
         font-family: inherit;
         margin: 0;
