--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -2,14 +2,11 @@
     font-family: 'Open Sans', sans-serif;
     margin: 70px 0 70px 0;
 }
-/* button default
----------------------------- */
 .btn-default {
     color: #333;
     background-color: #f8f9fa;
     border-color: #ccc;
 }
-
     .btn-default:focus {
         color: #333;
         background-color: #e6e6e6;
@@ -22,79 +19,9 @@
         background-color: #e6e6e6;
         border-color: #adadad;
     }
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-        font-size: 15px;
-        border: none;
-        outline: none;
-        color: lightgrey;
-        padding: 10px 12px;
-        background-color: inherit;
-        font-family: inherit;
-        margin: 0;
-    }
+.nav-link, .dropdown-toggle {
+    color: white !important;
+}/* AKI MUDAS A COR DA LETRA NA NAVBAR */
 
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-        float: none;
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-.dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial;
-}
-
-
-
-
-
-
-
-
-
-/*
-body {
-    margin: 70px 0 70px 0;
-    font-family: 'Open Sans', sans-serif;
-}
-.nav-item {
-    width : 200px;
-    text-align: center;
-}
-.nav-item:hover{
-    background-color:#056582;
-    font:bold;
-    font-weight:700;
-}
-.navbar-brand{
-    text-align:center;
-}
-    */
+    
