--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -20,8 +20,6 @@
         border-color: #adadad;
     }
 .nav-link, .dropdown-toggle {
-    color: palegreen !important;
+    color: white !important;
 }/* AKI MUDAS A COR DA LETRA NA NAVBAR */
 
-
-    
