--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -22,4 +22,21 @@
 .nav-link, .dropdown-toggle {
     color: white !important;
 }/* AKI MUDAS A COR DA LETRA NA NAVBAR */
-
+  li:after {
+  content: "";
+  position: relative;
+  width: 0%;
+  height: 1px;
+  display: block;
+  transition: all 0.3s ease;
+  bottom: 10%;
+}
+   li:hover::after {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
+  li {
+     margin-right: 30px;
+     
+ }
