--- a/Projeto/constructors2021.css
+++ b/Projeto/constructors2021.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     font-family: 'Open Sans', sans-serif;
     margin: 70px 0 70px 0;
 }
@@ -40,22 +40,7 @@
      margin-right: 30px;
      
  }
-
- .col-12 col-md-6 {
-    padding: 5px 5px 5px 5px;
-    border-radius: 10px;
-    height: 49px;
-    width: 22%;
-    margin: 5px 1% 5px 1%;
-    float: left;
-    position: relative;
-    transition: height 0.5s;
-    -webkit-transition: height 0.5s;
-    text-align: center;
-    overflow: hidden;
-    transition: 1.5s;
-  }
-  .col-12 col-md-6{
-    height: 145px;
-    width: 50vw;
-  }
+ .col-12 col-md-6{
+     border-top-left-radius:37px 140px;
+     border-color:black;
+ }
