--- a/Projeto/constructors2021.css
+++ b/Projeto/constructors2021.css
@@ -40,7 +40,8 @@ body {
      margin-right: 30px;
      
  }
- .col-12 col-md-6{
-     border-top-left-radius:37px 140px;
-     border-color:black;
- }
+ 
+ .mercedes:hover{
+    background: url("Images/mercedes-removebg-preview.png") no-repeat;
+    background-size:cover;
+}
