--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -22,7 +22,7 @@
 .nav-link, .dropdown-toggle {
     color: white !important;
 }/* AKI MUDAS A COR DA LETRA NA NAVBAR */
-  li:after {
+  .nav-item:after {
   content: "";
   position: relative;
   width: 0%;
@@ -31,12 +31,12 @@
   transition: all 0.3s ease;
   bottom: 10%;
 }
-   li:hover::after {
+  .nav-item:hover::after {
   width: 100%;
   height: 3px;
   background-color: #fff;
 }
-  li {
+  .nav-item {
      margin-right: 30px;
      
  }
