--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -40,3 +40,54 @@
      margin-right: 30px;
      
  }
+
+.search-box {
+    position: absolute;
+    top: 35%;
+    left: 75%;
+    transform: translate('-50%; -50%');
+    border-radius: 40px;
+    padding: 10px;
+    height: 40px;
+    background: #2f3640;
+}
+
+.search-btn {
+    color: #e84118;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-txt {
+    text-align: center;
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 0px;
+}
+
+
+.search-box:hover > .search-txt {
+    width: 240px;
+    padding: 0 6px;
+}
+
+.search-box:hover > .search-btn {
+    background: white;
+}
+
+
+
+
