--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -49,19 +49,22 @@
     border-radius: 40px;
     padding: 10px;
     height: 40px;
-    background: #2f3640;
+    background: white;
 }
 
 .search-btn {
     color: #e84118;
     float: right;
+    font-weight:bold;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #2f3640;
+    background: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    position:relative;
+    bottom: 20px;
 }
 
 .search-txt {
@@ -76,6 +79,8 @@
     transition: 0.4s;
     line-height: 40px;
     width: 0px;
+    position:relative;
+    bottom: 20px;
 }
 
 
