--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -1,5 +1,5 @@
 ﻿body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Titillium Web', sans-serif;;
     margin: 70px 0 70px 0;
 }
 .btn-default {
