--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -1,5 +1,5 @@
 ﻿body {
-    font-family: 'Titillium Web', sans-serif;;
+    font-family: 'Titillium Web', sans-serif;
     margin: 70px 0 70px 0;
 }
 .btn-default {
@@ -41,8 +41,12 @@
      
  }
 
+.zoom {
+    background-color: whitesmoke;
+    transition: transform .2s;
+    border-radius:10px;
+}
 
-
-
-
-
+.zoom:hover {
+        transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */   
+}
