--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -1,7 +1,7 @@
 ﻿body {
     font-family: 'Titillium Web', sans-serif;
     margin: 70px 0 70px 0;
-    background-color:grey !important;
+    background-color:white !important;
 }
 .btn-default {
     color: #333;
