--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -1,5 +1,5 @@
-﻿body {
-    font-family: 'Titillium Web', sans-serif;
+﻿body { 
+    font-family: 'Open Sans', sans-serif;
     margin: 70px 0 70px 0;
     background-color:white !important;
 }
