--- a/Projeto/myCSS.css
+++ b/Projeto/myCSS.css
@@ -37,6 +37,8 @@
 }
 
 .zoom:hover {
-        transform: scale(1.15); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */   
+        transform: scale(1.08); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */   
+        background-color: black;
+        color: whitesmoke;
 }
 
